--- a/GettingThingsDone/Views/Base.lproj/Main.storyboard
+++ b/GettingThingsDone/Views/Base.lproj/Main.storyboard
@@ -164,6 +164,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="eeQ-MK-s3T"/>
+        <segue reference="df5-ES-Au6"/>
     </inferredMetricsTieBreakers>
 </document>
