--- a/GettingThingsDone/Views/Base.lproj/Main.storyboard
+++ b/GettingThingsDone/Views/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <segue destination="gb9-KD-oI4" kind="showDetail" identifier="showDetail" id="df5-ES-Au6"/>
+                                    <segue destination="FlX-Mm-TaP" kind="showDetail" identifier="showDetail" id="kdF-7Q-hU2"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -164,6 +164,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="df5-ES-Au6"/>
+        <segue reference="kdF-7Q-hU2"/>
     </inferredMetricsTieBreakers>
 </document>
